# rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
guide/en/: INDEX.md
guide/en/features/01-chat-response/: rag-pipeline.md
guide/id/: INDEX.md
guide/id/features/01-chat-response/: rag-pipeline.md
src/: config.py  pipeline.py
src/api/: main.py
src/api/routes/: chat.py  detection.py  health.py  image_chat.py  knowledge_base.py
src/api/schemas/: __init__.py  chat.py  common.py  detection.py  health.py  image_chat.py  knowledge_base.py  request.py  response.py
src/core/: exceptions.py
src/data/: chunker.py  loader.py
src/embedding/: embedder.py  indexer.py
src/llm/: context_builder.py  generator.py  prompt_templates.py  query_rewriter.py  vision.py
src/retrieval/: evaluator.py  retriever.py
tests/: conftest.py  test_api_chat.py  test_api_health.py  test_api_knowledge_base.py  test_context_builder.py  test_detection_llm.py  test_detection_route.py  test_detection_schemas.py  test_e2e_rag_pipeline.py  test_generator.py  test_openai_connection.py  test_prompt_templates.py
tests/api/: test_image_chat.py
tests/data/: test_chunker.py  test_loader.py
