[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-rag-chatbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "docx2txt>=0.9",
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "openai>=2.37.0",
    "pypdf>=6.11.0",
    "pytest>=9.0.3",
    "uvicorn>=0.47.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_option]
asyncio_mode="auto"
pythonpath=["."]  

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
